Use deleteLater() to delete the process (which is a QObject) from its own slot - should fix the crash with Qt 4.5. Please test - if the fix works, I'll backport it to 4.2.x.

BUG: 182792

svn path=/trunk/KDE/kdesdk/kompare/; revision=924539